<resources>
    <string name="app_name">NeoFichaje</string>

    <!--EMPLEADO-->
    <!--pantalla de login empleado-->
    <string name="correo">Escribe tu email</string>
    <string name="contrasenia">Escribe tu contraseña</string>
    <string name="inicioSesion">Iniciar Sesión</string>

    <!--MENU empleado-->
    <string name="fichar">Control Horario</string>
    <string name="misDocumentos">Mis Documentos</string>
    <string name="nominas">Mis Nóminas</string>
    <string name="contrato">Mi Contrato</string>
    <string name="permisoBaja">Permiso/Baja</string>  <!--DE MOMENTO NO -->
    <string name="cerrarSesionEmpleado">Cerrar Sesión</string>

    <string name="abrir_menu">Abrir menú</string>
    <string name="cerrar_menu">Cerrar menú</string>

    <!--INICIO NOTIFICACIONES empleado-->
    <string name="horas">Notificación de Horas</string>
    <string name="vacaciones">Notificación de Vacaciones</string>
    <string name="nominasEmple">Notificación Mis Nóminas</string>
    <string name="contratoEmple">Notificación Mi Contrato</string>


    <!--pantalla de fichaje empleado-->
    <string name="tituloPantallaFichaje">Control Horario </string>
    <string name="inicioHorario">Inicio: </string>
    <string name="finHorario">Fin: </string>
    <string name="fecha">Seleccione Fecha</string>
    <string name="hora">Seleccione Hora</string>
    <string name="botonFicharEntrada">Fichar Entrada</string>
    <string name="botonFicharSalida">Fichar Salida</string>

    <!--pantalla de PERMISOS/BAJAS-->
    <string name="permiso">Seleccione el tipo de permiso o baja que necesita</string>
    <string name="tipoPermiso">Tipo de solicitud:</string>
    <string name="motivo">Motivo:</string>
    <string name="opcion">Si eligió "Otros":</string>
    <string name="otros">Escriba el motivo aquí</string>
    <string name="fechaInicio">Seleccione fecha de inicio</string>
    <string name="fechaFin">Seleccione fecha final</string>
    <string name="adjuntarPhoto">Adjuntar foto como documento</string>
    <string name="enviar">Enviar</string>


    <!--pantalla de vacaciones-->
    <string name="tituloVacaciones">Solicitar Vacaciones </string>
    <string name="SeleccioneFechaInicio">Seleccione Fecha de Inicio</string>
    <string name="SeleccioneFechaFin">Seleccione Fecha Final</string>
    <string name="descripcion">Si desea añada una descripción</string>
    <string name="comentario">Comentario:</string>
    <string name="enviarSolicitud">Enviar Solicitud</string>

    <!--pantalla de NOMINAS O CONTRATOS-->
    <string name="nominaMes">Nómina-Febrero 2025</string>
    <string name="ver">Ver </string>
    <string name="descargar">Descargar </string>
    <string name="contratoLaboral">Contrato Laboral</string>
    <string name="mensaje">No tienes contratos disponibles aún</string>
    <string name="mensajeNomina">No hay nóminas disponibles</string>

    <!--TITULOS BARRA de inicio-->
    <string name="bar_title">Inicio</string>


    <!--EMPRESARIO-->

    <!--ADMINISTRADOR REGISTRO-->
    <string name="empresaId">ID para la empresa</string>
    <string name="telefonoAdmin">Teléfono</string>
    <string name="puestoAdmin">Administrador</string>
    <string name="puestoA">Puesto:</string>
    <string name="pass">Contraseña</string>

    <!--LOGIN EMPRESARIO/ EMPLEADO-->
    <string name="puesto">Soy Administrador</string>
    <string name="registro">Registrarse</string>
    <string name="cambioPass">Olvide mi contraseña</string>
    <string name="google">Iniciar sesión con Google</string>
    <string name="default_web_client_id">300937761793-99i18b815ngb7j3je818n5omvl638en4.apps.googleusercontent.com</string>


    <!--MENU EMPRESARIO-->
    <string name="inicio">Inicio</string>
    <string name="gestionEmpleados">Gestión de Empleados</string>
    <string name="gestionAsistencia">Gestión Asistencia</string>
    <string name="gestionVacaciones">Gestión Vacaciones</string>
    <string name="adjuntarArchivo">Adjuntar Archivo</string>
    <string name="perfil">Mi Perfil</string>
    <string name="cerrarSesion">Cerrar Sesión</string>

    <!--LISTA DE EMPLEADOS Y EDITAR O AÑADIR-->
    <string name="lista">Lista de empleados</string>
    <string name="datosEmpleado">Datos del empleado</string>
    <string name="apellidos">Apellidos</string>
    <string name="emailEmpleado">Email</string>
    <string name="nombre">Nombre</string>
    <string name="numEmpleado">Número de empleado</string>
    <string name="telefono">Número de teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="puestoEmpleado">Puesto</string>
    <string name="btnAgregar">Agregar</string>
    <string name="editar">editar</string>
    <string name="agregar">Agregar nuevos empleados</string>
    <string name="eliminar">Eliminar</string>
    <string name="passEmpleado">Contraseña</string>
    <string name="vacacionesCrear">Vacaciones</string>

    <!--EDITAR CONTRASEÑA-->
    <string name="titlePass">Cambio de Contraseña</string>
    <string name="passActual">Contraseña actual:</string>
    <string name="passNueva">Nueva Contraseña:</string>
    <string name="passConfirmar">Confirmar Contraseña:</string>
    <string name="passGuardar">Guardar contraseña</string>

    <!--Terminos y condiciones-->
    <string name="acepto">He leido y acepto los</string>
    <string name="terminos">términos y condiciones de uso.</string>

    <!--GESTIÓN ADJUNTAR ARCHIVOS-->
    <string name="doc">Seleccionar el tipo de documento:</string>
    <string name="archivos">Subir archivos</string>
    <string name="arrastrar">Seleccione el archivo</string>
    <string name="select">Seleccionar empleado:</string>
    <string name="guardar">Guardar documento</string>
    <string name="tituloDoc">Título del documento (Enero, Febrero…)</string>

    <!--GESTIÓN DE VACACIONES-->
    <string name="titulo">Listado de solicitud de vacaciones</string>
    <string name="nuevas">Nuevas solicitudes:</string>
    <string name="realizadas">Solicitudes realizadas:</string>
    <string name="aplicar">Aplicar</string>
    <string name="aprobar">Aprobar</string>
    <string name="denegar">Denegar</string>

    <!--GESTIÓN ASISTENCIA/ CONTROL HORARIO-->
    <string name="dia">Día</string>
    <string name="mes">Mes</string>
    <string name="anual">Año</string>
    <string name="seleccione">Selecciona un día para ver el resumen</string>


    <!--pantalla de EDITAR PERFIL EMPRESA y PERFIL EMPRESA-->
    <string name="datosEmpresa">Datos de la empresa</string>
    <string name="nombreEmpresa">Nombre de Empresa</string>
    <string name="nifEmpresa">NIF</string>
    <string name="emailEmpresa">Email empresa</string>
    <string name="fonoEmpresa">Teléfono</string>
    <string name="dirreccionEmpresa">Dirección</string>
    <string name="webEmpresa">Sitio Web</string>


    <string name="tituloEmpresario">Datos del Administrador</string>
    <string name="nombreAdministrador">Nombre</string>
    <string name="apellidoAdministrador">Apellidos</string>
    <string name="emailAdministrador">Email Administrador</string>
    <string name="cargo">Puesto:</string>
    <string name="puestoAd">Administrador</string>
    <string name="btnEditarPerfil">Editar Perfil</string>
    <string name="btnCambiarPass">Cambiar Contraseña</string>

    <string name="logoEmpresa">Logo de la Empresa</string>
    <string name="btnGuardarCambios">Guardar Cambios</string>

    <!--item_documentos-->
    <string name="nombreDoc">Nombre del documento</string>
    <string name="opciones">Opciones</string>
</resources>