<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/misDocumentos">
        <menu>
            <item
                android:id="@+id/nav_item_nominaEmpleado"
                android:icon="@drawable/ic_contract"
                android:title="@string/nominas"/>
            <item
                android:id="@+id/nav_item_contratoEmpleado"
                android:icon="@drawable/ic_deal"
                android:title="@string/contrato"/>
        </menu>
    </item>
    <group>
        <item android:id="@+id/nav_item_inicioEmpleado"
            android:icon="@drawable/ic_timer"
            android:title="@string/fichar"/>
        <item android:id="@+id/nav_item_vacaEmpleado"
            android:icon="@drawable/ic_beach"
            android:title="@string/tituloVacaciones"/>
        <item android:id="@+id/nav_item_permisoEmpleado"
            android:icon="@drawable/ic_today"
            android:title="@string/permisoBaja"/>
        <item android:id="@+id/nav_item_cerrarEmpleado"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrarSesionEmpleado"/>
    </group>

</menu>