<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/menu_perfilEmpresa"
            android:icon="@drawable/ic_person"
            android:title="@string/perfil"/>
        <item android:id="@+id/menu_gestionEmpleados"
            android:icon="@drawable/ic_group"
            android:title="@string/gestionEmpleados"/>
        <item android:id="@+id/menu_asistenciaEmpleado"
            android:icon="@drawable/ic_timer"
            android:title="@string/gestionAsistencia"/>
        <item android:id="@+id/menu_gestionVacaiones"
            android:icon="@drawable/ic_beach"
            android:title="@string/gestionVacaciones"/>
        <item android:id="@+id/menu_adjuntarDocumento"
            android:icon="@drawable/ic_file"
            android:title="@string/adjuntarArchivo"/>
        <item android:id="@+id/menu_cerrarSesionEmpresa"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrarSesionEmpleado"/>
    </group>

</menu>