<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".registroGoogle">


    <TextView
        android:id="@+id/tituloEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:text="@string/datosEmpresa"
        android:textSize="16sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/etNombreEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_etbg"
        app:drawableStartCompat="@drawable/ic_business"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:ems="20"
        android:hint="@string/nombreEmpresa"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/etNif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/style_etbg"
        android:hint="@string/nifEmpresa"
        app:drawableStartCompat="@drawable/ic_nit"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:ems="20"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etEmailEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/style_etbg"
        android:drawableStart="@drawable/ic_email"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:ems="20"
        android:hint="@string/emailEmpresa"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etTelefonoEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_etbg"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="16dp"
        android:ems="20"
        android:hint="@string/fonoEmpresa"
        android:inputType="number"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etDireccionEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_etbg"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="16dp"
        android:ems="20"
        android:hint="@string/dirreccionEmpresa"
        android:inputType="text"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_etbg"
        android:drawableStart="@drawable/ic_web"
        android:drawablePadding="16dp"
        android:textColor="@color/black"
        android:ems="20"
        android:hint="@string/webEmpresa"
        android:inputType="text"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tituloAdministrador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:text="@string/tituloEmpresario"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_etbg"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="20"
        android:hint="@string/nombreAdministrador"
        android:inputType="textCapSentences|textPersonName"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_etbg"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="20"
        android:hint="@string/apellidoAdministrador"
        android:inputType="textCapSentences|textPersonName"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etEmpresaId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_etbg"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="20"
        android:hint="@string/empresaId"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_etbg"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="20"
        android:hint="@string/telefonoAdmin"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/etNumEmpleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_etbg"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_badge"
        android:drawablePadding="10dp"
        android:ems="20"
        android:hint="@string/numEmpleado"
        android:inputType="number"
        android:padding="4dp"
        android:textColorHint="@color/fondoPrincipal"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/puesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:text="@string/puestoA"
        android:textSize="16sp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/spinnerPuesto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <android.widget.Button
        android:id="@+id/btnGuardarGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:text="@string/btnGuardarCambios"
        android:textAllCaps="false"
        android:textSize="16sp" />
</LinearLayout>